Fixed z-index issues.

--- a/scss/_bg.scss
+++ b/scss/_bg.scss
@@ -11,7 +11,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    min-height: 25rem;
+    min-height: 28rem;
 
     @include breakpoint-up(large) {
       flex: 1;
@@ -24,6 +24,7 @@
 
   &__introduction {
     background-color: $darkViolet;
+    position: relative;
 
     &--left1 {
       position: absolute;
@@ -36,8 +37,8 @@
 
     &--right1 {
       position: absolute;
-      left: 61.4vw;
-      top: 143vh;
+      right: 0px;
+      bottom: -200px;
     }
 
     &--right2 {
@@ -46,6 +47,8 @@
     }
 
     &--text {
+      position: relative;
+      z-index: 1;
       text-align: center;
 
       @include breakpoint-up(large) {
@@ -70,6 +73,7 @@
       p {
         color: $veryLightGray;
         margin-bottom: 2.25rem;
+        line-height: 1.5;
 
         @include breakpoint-up(large) {
           font-size: $font-lg;
